packages/vuetify/src/stylus/components/_calendar-daily.styl
@import '../bootstrap'
@import '../theme'

v-calendar-daily($material)
  background-color: $material.calendar.background-color
  .v-calendar-daily__intervals-head
    border-right: $material.calendar.line-color 1px solid;
  .v-calendar-daily_head-day
    border-right: $material.calendar.line-color 1px solid;
    border-bottom: $material.calendar.line-color 1px solid;
    color: $material.calendar.text-color;
    &.v-past
      .v-calendar-daily_head-weekday,
      .v-calendar-daily_head-day-label
        color: $material.calendar.past-color
  .v-calendar-daily__intervals-body
    border-right: $material.calendar.line-color 1px solid;
    .v-calendar-daily__interval-text
      color: $material.calendar.interval-color;
  .v-calendar-daily__day
    border-right: $material.calendar.interval-line-color 1px solid;
    border-bottom: $material.calendar.interval-line-color 1px solid;
  .v-calendar-daily__day-interval
    border-top: $material.calendar.interval-line-color 1px solid;
    &:first-child
      border-top: none !important;

theme(v-calendar-daily, "v-calendar-daily")

.v-calendar-daily
  display: flex;
  flex-direction: column;
  overflow: hidden;
  height: 100%;

.v-calendar-daily__head
  flex: none;
  display: flex;

.v-calendar-daily__intervals-head
  flex: none;
  width: $calendar-daily-interval-gutter-width;

.v-calendar-daily_head-day
  flex: 1 1 auto;
  width: 0;

.v-calendar-daily_head-weekday
  user-select: none;
  padding: $calendar-daily-weekday-padding;
  font-size: $calendar-daily-weekday-font-size;

.v-calendar-daily_head-day-label
  user-select: none;
  font-size: $calendar-daily-day-font-size;
  padding: $calendar-daily-day-padding;
  line-height: $calendar-daily-day-line-height;
  cursor: pointer;

  &:hover
    text-decoration: underline;

.v-calendar-daily__body
  flex: 1 1 60%;
  overflow: hidden;
  display: flex;
  position: relative;
  flex-direction: column;

.v-calendar-daily__scroll-area
  overflow-y: scroll;
  flex: 1 1 auto;
  display: flex;
  align-items: flex-start;

.v-calendar-daily__pane
  width: 100%;
  overflow-y: hidden;
  flex: none;
  display: flex;
  align-items: flex-start;

.v-calendar-daily__day-container
  display: flex;
  flex: 1;
  width: 100%;
  height: 100%;

.v-calendar-daily__intervals-body
  flex: none;
  user-select: none;
  width: $calendar-daily-interval-gutter-width;

.v-calendar-daily__interval
  text-align: center;
  border-bottom: none;

.v-calendar-daily__interval-text
  display: block;
  position: relative;
  color: ;
  top: $calendar-daily-interval-gutter-top;
  font-size: $calendar-daily-interval-gutter-font-size;

.v-calendar-daily__day
  flex: 1;
  width: 0;
  position: relative;

