fix(vcalendar): fix missing color style

--- a/packages/vuetify/src/stylus/components/_calendar-daily.styl
+++ b/packages/vuetify/src/stylus/components/_calendar-daily.styl
@@ -98,7 +98,7 @@ theme(v-calendar-daily, "v-calendar-daily")
 .v-calendar-daily__interval-text
   display: block;
   position: relative;
-  color: ;
+  color: $material.calendar.interval-color;
   top: $calendar-daily-interval-gutter-top;
   font-size: $calendar-daily-interval-gutter-font-size;
 
